<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Band Heart Rate Sample</string>
    <string name="action_settings">Settings</string>
    
    <string name="steps">Steps to use this app: \n
        1. Pair your band with the phone\n
        2. Make sure Microsoft Health is installed\n
        3. Give the application permission to access your heart rate
        data by pressing the Heart Rate Consent button and then pressing
        yes on the dialog that pops up.\n
        4. Press the Start button\n
        5. Data from the heart rate sensor should be displayed.</string>
    <string name="start">Start</string>

    <string name="consent">Heart Rate Consent</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_name">Name</string>
    <string name="pref_name_default"></string>

    <string name="pref_number">Phone Number</string>
    <string name="pref_number_default"></string>

    <string name="pref_lower">Heartbeat Lower Bound</string>
    <string name="pref_lower_default">60</string>

    <string name="pref_upper">Heartbeat Upper Bound</string>
    <string name="pref_upper_default">120</string>

    <string name="pref_contact1">Emergency Contact 1</string>
    <string name="pref_contact1_default"></string>

    <string name="pref_contact2">Emergency Contact 2</string>
    <string name="pref_contact2_default"></string>

    <string name="pref_contact3">Emergency Contact 3</string>
    <string name="pref_contact3_default"></string>

    <string name="pref_contact4">Emergency Contact 4</string>
    <string name="pref_contact4_default"></string>

    <string name="pref_contact5">Emergency Contact 5</string>
    <string name="pref_contact5_default"></string>

    <string name="pref_interval">Message Interval (sec)</string>
    <string name="pref_interval_default"></string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
